# rp-why

./: LICENSE
mcp/: pyproject.toml
mcp/src/mcp_rpwhy/: __init__.py  server.py
mcp/src/mcp_rpwhy/tools/: analysis.py  baseline.py  ce.py  classify.py
references/: configuration-effectiveness.md
scripts/: goose_skill.py  rp_why_baseline.py  rp_why_ce.py
